/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    implementation libs.guava
    // implementation 'org.openjfx:javafx-controls:22'
    // implementation 'org.openjfx:javafx-fxml:22'
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.base.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.controls.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.fxml.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.graphics.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.media.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.swing.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx-swt.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.web.jar')
    implementation files('/opt/javafx-sdk/javafx-sdk-22.0.1/lib/javafx.properties')

    implementation 'io.github.cdimascio:dotenv-java:2.2.0'
    implementation 'org.postgresql:postgresql:42.2.20'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    implementation 'org.slf4j:slf4j-simple:2.0.13' // Replace with the latest version


}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

testing {
    suites {
        // Configure the built-in test suite
        test {
            // Use JUnit Jupiter test framework
            useJUnitJupiter('5.10.2')
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'com.pharmacy.Main'

    applicationDefaultJvmArgs = [
        "--module-path", System.getenv('PATH_TO_FX'),
        "--add-modules", "javafx.controls,javafx.fxml"

    ]
}